# battery-monitoring-system

client/: .env.template  .gitignore  package.json
client/src/app/: ClientLayout.tsx  Home.module.scss  globals.css  layout.tsx  page.tsx
client/src/app/api/auth/: [...nextauth].ts
client/src/app/auth/signin/: SignIn.tsx
client/src/app/components/: mockData.ts
client/src/app/components/ComboBox/: ComboBox.tsx
client/src/app/components/DataGraph/: DataGraph.tsx  Themes.ts  index.ts
client/src/app/components/Header/: Header.tsx
client/src/app/dashboard/: Dashboard.module.scss  Dashboard.tsx  dashboard.tsx
client/src/app/login/: login.tsx
client/src/context/: SensorContext.tsx
client/src/helper/: Util.ts  apiService.ts
client/src/theme/: lightTheme.ts
iot/esp32-sensor/: esp32-sensor.ino
server/: .gitignore  __init__.py  app.py  config.template.json  config.testing.json  pyproject.toml
server/battery_monitoring_system_api/: __init__.py  config.py  di.py  extensions.py  protected_view.py  utils.py
server/battery_monitoring_system_api/services/: battery_database_service.py  user_database_service.py
server/battery_monitoring_system_api/views/: __init__.py  schemas.py
server/battery_monitoring_system_api/views/auth/: __init__.py  resources.py  schemas.py
server/battery_monitoring_system_api/views/data/: resources.py  schemas.py
server/battery_monitoring_system_api/views/info/: resources.py  schemas.py
server/battery_monitoring_system_api/views/user/: resources.py  schemas.py
server/tests/: conftest.py  test_util.py
(+17 files in other folders)
