[tool.poetry]
name = "battery-monitoring-system-api"
version = "0.1.0"
description = ""
authors = ["Mikuláš Heřman <her.mikiherman@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_monitoring_system_api"}]

[tool.poetry.dependencies]
google-auth= "2.40.3"
python = "^3.11"
Flask = "==3.0.3"
flask-smorest = "==0.44.0"
pymongo = "==4.12.0"
Flask-JWT-Extended = "==4.6.0"
marshmallow = "==3.20.1"
Flask-Cors = "==4.0.1"
requests = "==2.32.3"
cryptography = "==43.0.3"
PyMySQL = "==1.1.1"
alembic = "==1.12.0"
pydantic = "==2.9.2"
pytz = "==2024.2"

[tool.poetry.group.test.dependencies]
ruff = "==0.5.1"
pytest = "==8.2.1"
pytest-cov = "==5.0.0"

[tool.poetry.scripts]
dev_setup = 'dev_setup:run'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S", "B"]
ignore = ["S101", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests}/*" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"